--- a/naturecoast-website/package.json
+++ b/naturecoast-website/package.json
@@ -1,5 +1,8 @@
 {
+  "name": "naturecoast-website",
+  "version": "1.0.0",
   "dependencies": {
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "resend": "^3.0.0"
   }
 }
