--- a/naturecoast-website/api/package.json
+++ b/naturecoast-website/api/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "resend": "^3.0.0"
+    "nodemailer": "^6.9.7",
+    "dotenv": "^16.3.1"
   },
   "engines": {
     "node": ">=18.0.0"
